<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add_product"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <!-- <EditText
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ID.." />-->

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
             />

        <EditText
            android:id="@+id/et_regular_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regular_price"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/et_sale_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sale_price"
            android:inputType="number"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/button_select"
                android:hint="@string/select_image"
                android:maxLines="2"
                android:padding="5dp"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/select" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/green_red_pink_test" />

        <EditText
            android:id="@+id/et_stores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stores"
            />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address1_address2_address3" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/save"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>